--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "glacom/glacom-functions",
+    "version": "1.0",
     "description": "Glacom functions for Laravel",
     "type": "library",
     "license": "mit",
@@ -13,6 +14,6 @@
             "name": "y"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {}
 }
