--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,6 @@
     "minimum-stability": "stable",
     "require": {
         "php": "^7.3|^8.0",
-        "laravel/nova": "^4.0",
+        "laravel/nova": "^4.0"
     }
 }
