--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Glacom\\Functions\\": "src/"
+            "Glacom\\": "src/"
         }
     },
     "authors": [
