--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     },
     "authors": [
         {
-            "name": "y"
+            "name": "Global Accelerationist Company"
         }
     ],
     "minimum-stability" : "dev",
